// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routine API /api/routines GET should retun all routines 1`] = `
Array [
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "enabled": true,
    "interval": "0 5 * * *",
    "lastRunAt": 0,
    "lastStatus": null,
    "name": "test at 5am",
    "nextRunAt": 0,
    "routineId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "runAtBankHoliday": true,
    "runWhenAway": false,
    "sceneId": "00c1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 1514851200000,
  },
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "enabled": true,
    "interval": "0 9 * * *",
    "lastRunAt": 0,
    "lastStatus": null,
    "name": "test at 9am",
    "nextRunAt": 0,
    "routineId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "runAtBankHoliday": false,
    "runWhenAway": false,
    "sceneId": "10c1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 1514851200000,
  },
  Object {
    "createdAt": 1514764800000,
    "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
    "enabled": false,
    "interval": "0 0 * * *",
    "lastRunAt": 0,
    "lastStatus": null,
    "name": "test at 12am",
    "nextRunAt": 0,
    "routineId": "2fc1d78e-fd1c-4717-b610-65d2fa3d01b3",
    "runAtBankHoliday": false,
    "runWhenAway": false,
    "sceneId": "10c1d78e-fd1c-4717-b610-65d2fa3d01b2",
    "updatedAt": 1514851200000,
  },
]
`;

exports[`Routine API /api/routines POST should save and start a new routine 1`] = `
Object {
  "createdAt": Any<Number>,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "enabled": true,
  "interval": "30 * * * * *",
  "lastRunAt": Any<Number>,
  "lastStatus": "success",
  "name": "new_routine",
  "nextRunAt": Any<Number>,
  "routineId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "runAtBankHoliday": true,
  "runWhenAway": false,
  "sceneId": "faaed78e-fd1c-4717-b610-65d2fa3d01b2",
  "updatedAt": Any<Number>,
}
`;

exports[`Routine API /api/routines/:routineId GET should return one routine 1`] = `
Object {
  "createdAt": 1514764800000,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "enabled": true,
  "interval": "0 5 * * *",
  "lastRunAt": 0,
  "lastStatus": null,
  "name": "test at 5am",
  "nextRunAt": 0,
  "routineId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
  "runAtBankHoliday": true,
  "runWhenAway": false,
  "sceneId": "00c1d78e-fd1c-4717-b610-65d2fa3d01b2",
  "updatedAt": 1514851200000,
}
`;

exports[`Routine API /api/routines/:routineId PATCH should enable routine and compute nextRunAt 1`] = `
Object {
  "createdAt": Any<Number>,
  "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
  "enabled": true,
  "interval": "0 12 * * *",
  "lastRunAt": 0,
  "lastStatus": null,
  "name": "routine_updated",
  "nextRunAt": Any<Number>,
  "routineId": "2fc1d78e-fd1c-4717-b610-65d2fa3d01b3",
  "runAtBankHoliday": false,
  "runWhenAway": false,
  "sceneId": "faaed78e-fd1c-4717-b610-65d2fa3d01b2",
  "updatedAt": Any<Number>,
}
`;

exports[`Routine API /api/routines/:routineId/action should run the routine 1`] = `
Array [
  Array [
    RowDataPacket {
      "createdAt": 1514764800000,
      "createdBy": "c10c80e8-49e4-4d6b-b966-4fc9fb98879f",
      "enabled": true,
      "interval": "0 5 * * *",
      "lastRunAt": 0,
      "lastStatus": null,
      "name": "test at 5am",
      "nextRunAt": 0,
      "routineId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      "runAtBankHoliday": true,
      "runWhenAway": false,
      "sceneId": "00c1d78e-fd1c-4717-b610-65d2fa3d01b2",
      "updatedAt": 1514851200000,
    },
  ],
]
`;
